# docs/swagger/promotion/v1/promotion/v1/promotion.swagger.json
@@ -49,6 +49,164 @@
         ]
       }
     },
+    "/api/v1/promotion/coupons/{coupon_id}/receive": {
+      "post": {
+        "consumes": [
+          "application/json"
+        ],
+        "operationId": "ReceiveCoupon",
+        "parameters": [
+          {
+            "description": "请求体",
+            "in": "body",
+            "name": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/v1ReceiveCouponRequest"
+            }
+          }
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "成功",
+            "schema": {
+              "$ref": "#/definitions/v1ReceiveCouponResponse"
+            }
+          },
+          "default": {
+            "description": "错误",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "summary": "ReceiveCoupon",
+        "tags": [
+          "PromotionService"
+        ]
+      }
+    },
+    "/api/v1/promotion/discount/calculate": {
+      "post": {
+        "consumes": [
+          "application/json"
+        ],
+        "operationId": "CalculateDiscount",
+        "parameters": [
+          {
+            "description": "请求体",
+            "in": "body",
+            "name": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/v1CalculateDiscountRequest"
+            }
+          }
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "成功",
+            "schema": {
+              "$ref": "#/definitions/v1CalculateDiscountResponse"
+            }
+          },
+          "default": {
+            "description": "错误",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "summary": "CalculateDiscount",
+        "tags": [
+          "PromotionService"
+        ]
+      }
+    },
+    "/api/v1/promotion/points/exchange": {
+      "post": {
+        "consumes": [
+          "application/json"
+        ],
+        "operationId": "ExchangePoints",
+        "parameters": [
+          {
+            "description": "请求体",
+            "in": "body",
+            "name": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/v1ExchangePointsRequest"
+            }
+          }
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "成功",
+            "schema": {
+              "$ref": "#/definitions/v1ExchangePointsResponse"
+            }
+          },
+          "default": {
+            "description": "错误",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "summary": "ExchangePoints",
+        "tags": [
+          "PromotionService"
+        ]
+      }
+    },
+    "/api/v1/promotion/points/{user_id}": {
+      "get": {
+        "consumes": [
+          "application/json"
+        ],
+        "operationId": "GetUserPoints",
+        "parameters": [
+          {
+            "description": "user_id 参数",
+            "in": "path",
+            "name": "user_id",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "成功",
+            "schema": {
+              "$ref": "#/definitions/v1GetUserPointsResponse"
+            }
+          },
+          "default": {
+            "description": "错误",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "summary": "GetUserPoints",
+        "tags": [
+          "PromotionService"
+        ]
+      }
+    },
     "/api/v1/promotion/promotions": {
       "get": {
         "consumes": [
@@ -73,6 +231,46 @@
           }
         },
         "summary": "GetPromotionList",
+        "tags": [
+          "PromotionService"
+        ]
+      }
+    },
+    "/api/v1/promotion/user-coupons/{user_coupon_id}/use": {
+      "post": {
+        "consumes": [
+          "application/json"
+        ],
+        "operationId": "UseCoupon",
+        "parameters": [
+          {
+            "description": "请求体",
+            "in": "body",
+            "name": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/v1UseCouponRequest"
+            }
+          }
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "成功",
+            "schema": {
+              "$ref": "#/definitions/v1UseCouponResponse"
+            }
+          },
+          "default": {
+            "description": "错误",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "summary": "UseCoupon",
         "tags": [
           "PromotionService"
         ]
